# BSUIR-labs

./: LICENSE  README.md
APK/lab01-COM-ports/: README.md  ver1.c  ver2.asm  ver3.asm
APK/lab03-Interrupt-controller/: README.md  int.c
APK/lab04-System-timer/: README.md  ghoul.c
APK/lab05-Real-time-clock/: README.md  rtc.c
APK/lab06-Keyboard/: README.md  keyboard.c
AVP/lab01-Vectorization/: README.md  main.cpp  vectorize.cpp
AVP/lab02-Cache/: README.md  cache.cpp  main.cpp
AVP/lab03-CUDA-Basics/: README.md  snake.cu
AVP/lab03-CUDA-basics/: main.cu
AVP/lab04-Monte-Carlo/: README.md  computation.cu  computation.cuh  main.cu  math.cuh  timers.cuh  timers.hpp  volume.cu
AVP/lab05-Image-processing/: README.md  fisheye.cu  fisheye.cuh  image.cu  image.cuh  interpolation.cu  interpolation.cuh  main.cu  marker.cu  marker.cuh  utility.cuh
COSII/lab01-DFT/: dft.py
COSII/lab03-FWHT/: README.md  fwht.py
COSiI-Images/lab01-Image-processing/: Cargo.toml  README.md
COSiI-Images/lab01-Image-processing/src/: main.rs
COSiI-Images/lab04-Multilayer-perceptron/: Cargo.toml  README.md  source.txt  test.txt
COSiI-Images/lab04-Multilayer-perceptron/src/: main.rs
COSiI-Signals/lab01-DFT/: README.md  dft.py
COSiI-Signals/lab02-Convolution-and-Correlation/: README.md  computations.py
IiPU/lab01-Battery/: README.md  battery.cpp
IiPU/lab02-PCI/: README.md  pci.cpp
IiPU/lab04-Webcam/: README.md  webcam.cpp
IiPU/lab05-USB/: README.md  usb.cpp
KPP/: README.md  build.gradle
SPOLKS/lab01-04-Sockets/: Cargo.toml  README.md
SPOLKS/lab01-04-Sockets/src/: client.rs  common.rs  main.rs  server.rs
lab01-Random-number-generator/: Cargo.toml
(+320 files in other folders)
