[package]
name = "lab01_image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
image = { version = "0.24.0", features = ["jpeg"] }
