[package]
name = "sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = { version = "0.5.6" }
chrono = { version = "0.4.31" }
log = { version = "0.4.20" }
env_logger = { version = "0.10.1" }
clap = { version = "4.4.11", features = ["derive"] }
fork = { version = "0.1.22" }
